dsp: Add first struture for transfer process
