# pycxids/core/http_binding/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  http_binding_openapi.yaml
-#   timestamp: 2023-06-01T20:56:02+00:00
+#   timestamp: 2023-06-01T21:25:37+00:00
 
 from __future__ import annotations
 
@@ -48,6 +48,14 @@ class DspaceState(Enum):
     verified = 'VERIFIED'
     finalized = 'FINALIZED'
     terminated = 'TERMINATED'
+
+
+class DspaceState1(Enum):
+    requested = 'REQUESTED'
+    started = 'STARTED'
+    terminated = 'TERMINATED'
+    completed = 'COMPLETED'
+    suspended = 'SUSPENDED'
 
 
 class LanguageValue(MyBaseModel):
@@ -159,6 +167,35 @@ class ContractNegotiation(JsonLd):
     field_type: Optional[str] = Field('dspace:ContractNegotiation', alias='@type')
     dscpace_process_id: Optional[str] = Field(None, alias='dscpace:processId')
     dspace_state: Optional[DspaceState] = Field(None, alias='dspace:state')
+
+
+class TransferRequestMessage(JsonLd):
+    field_type: Optional[str] = Field('dspace:TransferRequestMessage', alias='@type')
+    dct_format: Optional[str] = Field(
+        None,
+        alias='dct:format',
+        description='The dct:format property is a format specified by a Distribution for the Asset associated with the agreement. This is generally obtained from the provider Catalog.',
+    )
+    dspace_data_address: Optional[str] = Field(
+        None,
+        alias='dspace:dataAddress',
+        description='The dataAddress property must only be provided if the dct:format requires a push transfer.',
+    )
+    dscpace_callback_address: Optional[str] = Field(
+        None, alias='dscpace:callbackAddress'
+    )
+
+
+class TransferStartMessage(JsonLd):
+    field_type: Optional[str] = Field('dspace:TransferStartMessage', alias='@type')
+    dspace_process_id: Optional[str] = Field(None, alias='dspace:processId')
+    dspace_data_address: Optional[str] = Field(None, alias='dspace:dataAddress')
+
+
+class TransferProcess(JsonLd):
+    field_type: Optional[str] = Field('dspace:TransferProcess', alias='@type')
+    dscpace_process_id: Optional[str] = Field(None, alias='dscpace:processId')
+    dspace_state: Optional[DspaceState1] = Field(None, alias='dspace:state')
 
 
 class DcatDataset(MyBaseModel):
